The website navigation bar is added along with your styles

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+/* Header */
+.navigation {
+  padding: 0 !important;
+}
+
+.navigation .navbar {
+  border-radius: 0 !important;
+  background: #e53c37 !important;
+  border: none;
+}
+
+.navigation .navbar * {
+  color: white !important;
+}
