--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,9 +3,9 @@
     <div class="container-fluid">
       <div class="navbar-header"><a href="#" class="navbar-brand">{{ title }}</a></div>
       <ul class="nav navbar-nav">
-        <li><a href="#"><span class="glyphicon glyphicon-home"></span>Inicio</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-home"></span>Home</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-th-list"></span>Timeline</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span>Gente</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span>People</a></li>
       </ul>
     </div>
   </div>
