--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,1 +1,11 @@
-<h1>{{title}}</h1>
+<div class="col-lg-6">
+  <h1>{{title}}</h1>
+  <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)" class="col-lg-10">
+    <p><label>Name</label><input type="text" name="name" #name="ngModel" [(ngModel)]="user.name" class="form-control" title="Account name" required><span *ngIf="!name.valid && name.touched">The name is required!</span></p>
+    <p><label>Surname</label><input type="text" name="surname" #surname="ngModel" [(ngModel)]="user.surname" class="form-control" title="Account surname" required><span *ngIf="!surname.valid && surname.touched">The surname is required!</span></p>
+    <p><label>Nickname</label><input type="text" name="nickname" #nickname="ngModel" [(ngModel)]="user.nickname" class="form-control" title="Account nickname" required><span *ngIf="!nickname.valid && nickname.touched">The nickname is required!</span></p>
+    <p><label>Email</label><input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" title="Account email" required><span *ngIf="!email.valid && email.touched">The email is not valid!</span></p>
+    <p><label>Password</label><input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control" title="Account password" required><span *ngIf="!password.valid && password.touched">The password is required!</span></p>
+    <input type="submit" value="{{title}}" class="btn btn-success" [disabled]="!registerForm.form.valid">
+  </form>
+</div>
