--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,20 @@
+/* General */
+.h1-strong {
+  border-bottom: 1px solid #eee;
+  font-size: 35px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding-bottom: 15px;
+}
+
+.active {
+  background: #cc1717;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
 /* Header */
 .navigation {
   padding: 0 !important;
