--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,1 +1,10 @@
-<h1>{{title}}</h1>
+<div class="col-lg-5">
+  <h1 class="h1-strong">{{ title }}</h1>
+  <div class="alert alert-success" *ngIf="status == 'success'">Welcome</div>
+  <div class="alert alert-danger" *ngIf="status == 'error'">Unable to identify</div>
+  <form #loginForm="ngForm" (ngSubmit)="onSubmit()" class="col-lg-12">
+    <p><label>Email</label><input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" title="Enter the email"><span *ngIf="!email.valid && email.touched">The email is not correct</span></p>
+    <p><label>Password</label><input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control" required title="Enter the password"><span *ngIf="!password.valid && password.touched">The password is required</span></p>
+    <input type="submit" value="Login" class="btn btn-success" [disabled]="!loginForm.form.valid">
+  </form>
+</div>
