--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -21,11 +21,51 @@
 }
 
 .navigation .navbar {
-  border-radius: 0 !important;
-  background: #e53c37 !important;
+  background-color: #e53c37 !important;
   border: none;
+  border-radius: 0 !important;
 }
 
 .navigation .navbar * {
   color: white !important;
+}
+
+.navigation .navbar a:hover {
+  background: #cc1717 !important;
+}
+
+.navigation .navbar .dropdown-menu * {
+  color: black !important;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus {
+  background: #cc1717 !important;
+}
+
+.navigation .navbar .dropdown-menu a:hover {
+  background: #eee !important;
+}
+
+.navigation .avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 100px;
+  overflow: hidden;
+  margin-top: 9px;
+  margin-left: 2px;
+}
+
+.navigation .avatar img {
+  height: auto;
+  width: 35px;
+}
+
+.jumbotron {
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.user-image-for-edit img {
+  height: 60px;
 }
