--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,12 +7,12 @@
       <ul class="nav navbar-nav" *ngIf="identity">
         <li><a [routerLink]="['/home']" [routerLinkActive]="['active']">Home <span class="glyphicon glyphicon-home"></span></a></li>
         <li><a [routerLink]="['/timeline']" [routerLinkActive]="['active']">Timeline <span class="glyphicon glyphicon-th-list"></span></a></li>
-        <li><a [routerLink]="['/gente']" [routerLinkActive]="['active']">People <span class="glyphicon glyphicon-user"></span></a></li>
+        <li><a [routerLink]="['/people']" [routerLinkActive]="['active']">People <span class="glyphicon glyphicon-user"></span></a></li>
         <li><a [routerLink]="['/mensajes']" [routerLinkActive]="['active']">Messages <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" *ngIf="!identity">
         <li><a [routerLink]="['/login']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
-        <li><a [routerLink]="['/registro']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-user"></span>Register</a></li>
+        <li><a [routerLink]="['/register']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-user"></span>Register</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" *ngIf="identity">
         <li class="avatar"><img src="{{ url + 'get-image-user/' + identity.image }}" *ngIf="identity && identity.image"></li>
