--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -113,3 +113,93 @@
 .avatar-default {
   width: 100% !important;
 }
+
+.sidebar-32 {
+  width: 32% !important;
+  padding: 0px !important;
+}
+
+#user-card, #new-publication {
+  padding: 25px;
+  width: 32%;
+}
+
+#user-card .avatar img {
+  width: 100%;
+}
+
+#user-card .avatar {
+  width: 75px;
+  height: 75px;
+  border-radius: 100px;
+  overflow: hidden;
+  margin-right: 15px;
+}
+
+#user-card .name-surname {
+  font-weight: 300;
+  font-size: 17px;
+}
+
+#user-card .name-surname a:hover {
+  text-decoration: none;
+  color: #000;
+}
+
+#user-card .name-surname a {
+  color: #555;
+}
+
+#user-card .name-surname .nickname {
+  color: #969393;
+}
+
+#user-card .stats {
+  border-top: 1px solid #ccc;
+  margin-top: 10px;
+}
+
+#user-card .stats a:hover {
+  text-decoration: none;
+}
+
+#user-card .stats a:hover .number-stats {
+  color: #cc1717;
+}
+
+#user-card .number-stats {
+  font-weight: bold;
+  color: green;
+}
+
+#user-card .label-stats, #user-card .number-stats {
+  display: block;
+  text-align: center;
+  transition: all 300ms;
+}
+
+#user-card .label-stats {
+  font-weight: bold;
+  color: #555;
+}
+
+#user-card .following-data {
+  float: left;
+  padding-left: 18px;
+  padding-right: 18px;
+  margin-top: 20px;
+  border-right: 2px solid #ccc;
+}
+
+#user-card .following-data:first-child {
+  padding-left: 6px;
+}
+
+#user-card .following-data:last-child {
+  border: none;
+}
+
+#new-publication {
+  padding: 18px;
+  padding-left: 8px;
+}
