The function is implemented to review the profile of a user and corrections are made in the server to show the data of a user

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -19,7 +19,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{identity.name}} <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a [routerLink]="['/perfil', identity._id]"><span class="glyphicon glyphicon-user"></span> My profile</a></li>
+            <li><a [routerLink]="['/profile', identity._id]"><span class="glyphicon glyphicon-user"></span> My profile</a></li>
             <li><a [routerLink]="['/my-data']"><span class="glyphicon glyphicon-cog"></span> My data</a></li>
             <li><a href="#" class="pointer" (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
           </ul>
