--- a/client/src/app/components/publications/publications.component.html
+++ b/client/src/app/components/publications/publications.component.html
@@ -7,7 +7,7 @@
           <a href="#"><img src="../../../assets/user.png" *ngIf="!publication.user.image" class="avatar-default"></a>
         </div>
         <div>
-          <a [routerLink]="['/perfil', publication.user._id]" class="user-name">{{ publication.user.name  + ' ' + publication.user.surname }}</a>&nbsp;|&nbsp;<span class="date">{{ (publication.createdAt | amFromUnix ) | amLocale:'es' | amTimeAgo }}</span>
+          <a [routerLink]="['/profile', publication.user._id]" class="user-name">{{ publication.user.name  + ' ' + publication.user.surname }}</a>&nbsp;|&nbsp;<span class="date">{{ (publication.createdAt | amFromUnix ) | amLocale:'es' | amTimeAgo }}</span>
         </div>
         <h4 class="publication-text pull-left">
           {{ publication.text }}
@@ -17,5 +17,5 @@
   </div>
 </div>
 <div class="col-lg-12 text-center" *ngIf="publications && publications.length">
-  <p><button class="btn btn-success" (click) = "viewMore()" *ngIf="!noMore">Ver más</button></p>
+  <p><button class="btn btn-success" (click)="viewMore()" *ngIf="!noMore">See more</button></p>
 </div>
