--- a/client/src/app/components/user/user.component.html
+++ b/client/src/app/components/user/user.component.html
@@ -10,7 +10,7 @@
             <a href="#"><img src="../../../assets/user.png" *ngIf="!user.image" class="avatar-default"></a>
           </div>
           <div class="user-name pull-left">
-            <p class="name-surname"><a [routerLink]="['/perfil', user._id]">{{ user.name + ' ' + user.surname }}</a></p>
+            <p class="name-surname"><a [routerLink]="['/profile', user._id]">{{ user.name + ' ' + user.surname }}</a></p>
             <p class="nickname">{{ user.nickname }}</p>
           </div>
           <!-- Follow / Stop following  -->
