--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -203,3 +203,58 @@
   padding: 18px;
   padding-left: 8px;
 }
+
+/* Profile */
+#data-profile {
+  min-height: 500px;
+  text-align: left;
+}
+
+#data-profile .avatar {
+  width: 185px;
+  height: 185px;
+  border-radius: 400px;
+  overflow: hidden;
+  margin-right: 15px;
+}
+
+#data-profile .avatar img {
+  width: 100%;
+}
+
+#data-profile .user-name {
+  margin-top: 15px;
+}
+
+#data-profile .user-name .label {
+  margin-bottom: 15px;
+}
+
+#data-profile .user-name .name {
+  font-size: 24px;
+  font-weight: bold;
+  color: #555;
+}
+
+#data-profile .user-name .nick {
+  font-size: 24px;
+  font-weight: normal;
+  color: gray;
+}
+
+#data-profile .stats {
+  border-left: 4px solid #ccc;
+  margin-left: 35px;
+  padding-left: 25px;
+  height: 180px;
+}
+
+#data-profile .stats a {
+  font-size: 20px;
+  line-height: 35px;
+  color: #555;
+}
+
+#data-profile .publications {
+  margin-top: 20px;
+}
