--- a/client/src/app/components/timeline/timeline.component.html
+++ b/client/src/app/components/timeline/timeline.component.html
@@ -5,16 +5,15 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="image-user pull-left">
-            <a [routerLink]="['/perfil', publication.user._id]"><img src="{{ url + 'get-image-user/' + publication.user.image }}" *ngIf="publication.user.image"><img src="../../../assets/user.png" *ngIf="!publication.user.image" class="avatar-default"></a>
+            <a [routerLink]="['/profile', publication.user._id]"><img src="{{ url + 'get-image-user/' + publication.user.image }}" *ngIf="publication.user.image"><img src="../../../assets/user.png" *ngIf="!publication.user.image" class="avatar-default"></a>
           </div>
           <div>
-            <a [routerLink]="['/perfil', publication.user._id]" class="user-name">{{ publication.user.name  + ' ' + publication.user.surname }}</a>&nbsp;|&nbsp;<span class="date">{{ (publication.createdAt | amFromUnix ) | amLocale:'es' | amTimeAgo }}</span>
+            <a [routerLink]="['/profile', publication.user._id]" class="user-name">{{ publication.user.name  + ' ' + publication.user.surname }}</a>&nbsp;|&nbsp;<span class="date">{{ (publication.createdAt | amFromUnix ) | amLocale:'es' | amTimeAgo }}</span>
           </div>
           <h4 class="publication-text pull-left">
             {{ publication.text }}
           </h4>
-          <div class="pull-right" *ngIf="publication.user._id == identity._id">
-            &nbsp;
+          <div class="pull-right" *ngIf="publication.user._id == identity._id">&nbsp;
             <!-- Button Modal -->
             <a href="#myModal{{ publication._id }}" role="button" class="btn btn-danger" data-toggle="modal" *ngIf="showImage != publication._id"><span class="glyphicon glyphicon-trash"></span></a>
             <!-- Modal HTML -->
@@ -41,7 +40,7 @@
             <button class="btn btn-warning btn-sm pull-right" (click)="showThisImage(publication._id)" *ngIf="showImage != publication._id"><span class="glyphicon glyphicon-picture"></span></button>
             <button class="btn btn-danger btn-sm pull-right" (click)="hideThisImage(publication._id)" *ngIf="showImage == publication._id"><span class="glyphicon glyphicon-remove-circle"></span></button>
           </div>
-          <div class="col-lg-12" *ngIf="publication.file != 'null' && showImage == publication._id"><br><img src="{{ url + 'get-image-pub/' +  publication.file}}" class="col-lg-12"></div>
+          <div class="col-lg-12 image-Publication" *ngIf="publication.file != 'null' && showImage == publication._id"><br><img src="{{ url + 'get-image-pub/' +  publication.file}}" class="col-lg-12"></div>
         </div>
       </div>
     </div>
