The module is implemented to send and receive private messages with their respective routes

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,7 @@
         <li><a [routerLink]="['/home']" [routerLinkActive]="['active']">Home <span class="glyphicon glyphicon-home"></span></a></li>
         <li><a [routerLink]="['/timeline']" [routerLinkActive]="['active']">Timeline <span class="glyphicon glyphicon-th-list"></span></a></li>
         <li><a [routerLink]="['/people']" [routerLinkActive]="['active']">People <span class="glyphicon glyphicon-user"></span></a></li>
-        <li><a [routerLink]="['/mensajes']" [routerLinkActive]="['active']">Messages <span class="glyphicon glyphicon-envelope"></span></a></li>
+        <li><a [routerLink]="['/messages']" [routerLinkActive]="['active']">Messages <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" *ngIf="!identity">
         <li><a [routerLink]="['/login']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
